tests/fixtures/errors/module_not_found.lox
import "self:does_not_exist.lox" as dne;
var x = dne::something;
